src/App.css
/* Scroll Bar */
::-webkit-scrollbar {
    width: 12px;
}

/* Track */
::-webkit-scrollbar-track {
    box-shadow:inset 0 0 6px rgba(0,0,0,0.3);
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    -webkit-border-radius: 10px;
    border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  box-shadow:inset 0 0 6px rgba(0,0,0,0.5);
    -webkit-border-radius: 10px;
    border-radius: 10px;
    background: rgba(44,51,70, 0.8);
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
}

::-webkit-scrollbar-thumb:window-inactive {
    background: rgba(44,51,70, 0.8);
}

.landing-grid {
  text-align: center;
  position: fixed;
  font-family: 'Roboto';
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: 100% 100%;
  overflow: scroll;
  overflow-x: hidden;
}
.mdl-layout__header-row .mdl-navigation__link{
  color: black !important;
  font-size: 1em;
}

.background-image{
  background-image: url('./img/blue_bgnd_phone.jpg');
  width: 100%;
  height: 100%;
  background-size: 100% 100%;
}
@media screen and (min-width: 750px){

  .background-image{
    background-image: url('./img/blue_bgnd.jpg');
    min-height: 90vh;
  }
}
.dark-background{
  background: #40496b;
}
strong{
  color: #b1c0e9;
}
/* Critic Reviews */
.aboutme .critic-reviews p {
  font-size: 1.3em;
  padding-top: 0em;
  padding-left: 1em;
  padding-right: 1em;
  color:white;
}
.aboutme .critic-reviews h2 {
  font-size: 55px;
  padding-top: 0.7em;
  font-weight: bold;
  color:white;
}
.critic-reviewer {
  font-family: 'PT Serif';
}

/* Resume */
.dot {
  height: 15px;
  width: 15px;
  background-color: #bbb;
  border-radius: 50%;
  margin-left:0.5em;
  margin-right:0.5em;
  display: inline-block;
}
.resume-personal-info{
  text-align: center;

}
@media screen and (min-width: 1024px){
  .mdl-layout .mdl-layout__drawer-button i {
    color: black !important;
    line-height: 2 !important;
  }
}

.mdl-grid{
  padding: 0 !important;
}
@media screen and (max-width: 1024px){
  .mdl-layout .mdl-layout__drawer-button i {
    color: #E8ECF8 !important;
    margin-top: 0.5em;
    font-size: 30px !important;
    left: auto;
    right: 1  !important;
    position: fixed !important;
  }
}

.projects-grid {
  display: flex;
}

/* Resume Page css */
.resume-right-col {
    color: white;
    text-align: left;
    padding-left: 2em;
    padding-right: 2em;
}
.resume-right-col p {
    font-size: 1.1em;
}

.avatar-resume-img {
  padding-bottom:0em;
  padding-top: 1em;
  margin-left: auto;
  margin-right: auto;
}


#landing-title {
    font-size: 4em;
    color: white;
    text-align: center;
    margin-bottom: 0;
}

/* Contact page */

.contact-body {
  width: 100%;
  justify-content: center;
  padding-top: 10em;
}

.center-style{
  justify-content: center;
}

.list-content {
  margin: 0;
}

/* home page */

.landing-page-skills p{
  display: inline;
  white-space: nowrap;
}
.avatar-img {
  height: 350px;
  padding-top: 5em;
}
@media screen and (max-width: 1024px){
.avatar-img {
  padding-top: 2em;
}
}
.banner-text {
    color: white;
    margin: auto;
    margin-top: 2em;
    padding-left: 1em;
    padding-right: 1em;
}
.banner-text h1 {
  font-weight: bold;
  color: white;
}

.banner-text h2 {
  font-size: 55px;
  padding-top: 0.3em;
  font-weight: bold;
  color: #323232;
}

.banner-text hr {
  border-top: 5px dotted white;
  width: 50%;
  margin: auto;
}

.banner-text p {
    color: white;
    font-size: 1.6em;
    padding-top: 0em;
    padding-left: 0.85em;
    padding-right: 0.85em;
}
.header-color {
  background: #E8ECF8; /* fallback for old browsers */
  opacity: 0.95;
  font-family: 'Roboto';
  background: -webkit-linear-gradient(to right, #E8ECF8 #E8ECF8); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to right, #E8ECF8, #E8ECF8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}
.mdl-logo{
color: #323232 !important;
}
/* About me page */
.aboutme {
  color: black;
  margin: auto;
  width: 100%;
  background-color: #f9fafb;
}
.aboutme p{
  padding-left: 2em;
  padding-right: 2em;
}
.aboutme p {
  color: black;
  font-size: 1.1em;
  padding-top: 0em;
}
.aboutme h2 {
  font-size: 55px;
  padding-top: 0.3em;
  font-weight: bold;
  color: #323232;
}

.mdl-textfield {
    margin: -20px 0;
}

@media (max-width: 479px){
  .mdl-cell {
    margin: 0px;
    width: calc(100% - 16px);
}
}

#no-margin {
    margin: 0px  ! Important;
}

@media (max-width: 479px){
  #no-margin {
    margin: 0px  ! Important;
}
  
}

#bottom_p {
  padding-top: 1em;
  padding-bottom: 2em;
}
.star {
    font-size: x-large;
    width: 50px;
    display: inline-block;
    color: gray;
}
.star:last-child {
    margin-right: 0;
}
.star:before {
    content:'\2605';
}
.star.on {
    color: #e6d8ad;
}
.star.half:after {
    content:'\2605';
    color: #161205;
    position: absolute;
    margin-left: -20px;
    width: 10px;
    overflow: hidden;
}
.divider
{
	position: relative;
	margin-top: 90px;
	height: 1px;
}

.div-transparent:before
{
	content: "";
	position: absolute;
	top: 0;
	left: 5%;
	right: 5%;
	width: 90%;
	height: 1px;
  box-shadow: 0 1em 1em -1em rgba(0, 0, 0, .25);
	background-image: linear-gradient(to right, transparent, #444E74, transparent);
}

/* Divider */
hr.style13 {
	height: 8px;
	border: 0;
  width: 100%;
	box-shadow: 0 8px 8px -8px #8c8b8b inset;
}
.mdl-mega-footer--link-list .mdl-mega-footer__link-list{
margin-bottom: 0px !important;
}

